parameterize expensive parts of notebooks

--- a/doc_template/examples_root/examples/nb/brain_observatory_analysis.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_analysis.ipynb
@@ -41,7 +41,8 @@
    "outputs": [],
    "source": [
     "output_dir = '.'\n",
-    "resources_dir = Path.cwd().parent / 'resources'"
+    "resources_dir = Path.cwd().parent / 'resources'\n",
+    "RUN_LOCALLY_SPARSE_NOISE = True"
    ]
   },
   {
@@ -439,59 +440,44 @@
     "exp = boc.get_ophys_experiments(experiment_container_ids=[cell['experiment_container_id']],\n",
     "                                stimuli=[stim_info.LOCALLY_SPARSE_NOISE])[0]\n",
     "                                         \n",
-    "data_set = boc.get_ophys_experiment_data(exp['id'])\n",
-    "\n",
-    "# This takes a while to run. Uncomment to actually run\n",
-    "# lsn = LocallySparseNoise(data_set)\n",
-    "# print(\"done analyzing locally sparse noise\")"
+    "data_set = boc.get_ophys_experiment_data(exp['id'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.pyplot as plt\n",
-    "# %matplotlib inline\n",
-    "\n",
-    "# cell_idx = data_set.get_cell_specimen_indices([specimen_id])[0]\n",
-    "#\n",
-    "# plt.imshow(lsn.receptive_field[:,:,cell_idx,0], interpolation='nearest', cmap='PuRd', origin='lower')\n",
-    "# plt.title(\"on receptive field\")\n",
-    "# plt.show()\n",
-    "# plt.imshow(lsn.receptive_field[:,:,cell_idx,1], interpolation='nearest', cmap='Blues', origin='lower')\n",
-    "# plt.title(\"off receptive field\")\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
     "from PIL import Image\n",
-    "off_receptive_field = Image.open(Path(resources_dir) /\n",
-    "                                 'brain_observatory_analysis' /\n",
-    "                                 'off_receptive_field.png')\n",
-    "display(off_receptive_field)\n",
+    "%matplotlib inline\n",
     "\n",
-    "on_receptive_field = Image.open(Path(resources_dir) /\n",
-    "                                 'brain_observatory_analysis' /\n",
-    "                                 'on_receptive_field.png')\n",
-    "display(on_receptive_field)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "if RUN_LOCALLY_SPARSE_NOISE:\n",
+    "    lsn = LocallySparseNoise(data_set)\n",
+    "    print(\"done analyzing locally sparse noise\")\n",
+    "\n",
+    "    cell_idx = data_set.get_cell_specimen_indices([specimen_id])[0]\n",
+    "\n",
+    "    plt.imshow(lsn.receptive_field[:,:,cell_idx,0], interpolation='nearest', cmap='PuRd', origin='lower')\n",
+    "    plt.title(\"on receptive field\")\n",
+    "    plt.show()\n",
+    "    plt.imshow(lsn.receptive_field[:,:,cell_idx,1], interpolation='nearest', cmap='Blues', origin='lower')\n",
+    "    plt.title(\"off receptive field\")\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    # read in LocallySparseNoise output and display it\n",
+    "    off_receptive_field = Image.open(Path(resources_dir) /\n",
+    "                                     'brain_observatory_analysis' /\n",
+    "                                     'off_receptive_field.png')\n",
+    "    display(off_receptive_field)\n",
+    "\n",
+    "    on_receptive_field = Image.open(Path(resources_dir) /\n",
+    "                                     'brain_observatory_analysis' /\n",
+    "                                     'on_receptive_field.png')\n",
+    "    display(on_receptive_field)"
+   ]
   }
  ],
  "metadata": {
