--- a/doc_template/examples_root/examples/nb/ecephys_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_data_access.ipynb
@@ -106,7 +106,8 @@
    },
    "outputs": [],
    "source": [
-    "output_dir = '/local1/ecephys_cache_dir' # must be updated to a valid directory in your filesystem"
+    "output_dir = '/local1/ecephys_cache_dir' # must be updated to a valid directory in your filesystem\n",
+    "DOWNLOAD_COMPLETE_DATASET = True"
    ]
   },
   {
@@ -1216,36 +1217,37 @@
    },
    "outputs": [],
    "source": [
-    "# for session_id, row in sessions.iterrows():\n",
+    "if DOWNLOAD_COMPLETE_DATASET:\n",
+    "    for session_id, row in sessions.iterrows():\n",
     "\n",
-    "#     truncated_file = True\n",
-    "#     directory = os.path.join(output_dir + '/session_' + str(session_id))\n",
-    "    \n",
-    "#     while truncated_file:\n",
-    "#         session = cache.get_session_data(session_id)\n",
-    "#         try:\n",
-    "#             print(session.specimen_name)\n",
-    "#             truncated_file = False\n",
-    "#         except OSError:\n",
-    "#             shutil.rmtree(directory)\n",
-    "#             print(\" Truncated spikes file, re-downloading\")\n",
+    "        truncated_file = True\n",
+    "        directory = os.path.join(output_dir + '/session_' + str(session_id))\n",
     "\n",
-    "#     for probe_id, probe in session.probes.iterrows():\n",
-    "        \n",
-    "#         print(' ' + probe.description)\n",
-    "#         truncated_lfp = True\n",
-    "        \n",
-    "#         while truncated_lfp:\n",
-    "#             try:\n",
-    "#                 lfp = session.get_lfp(probe_id)\n",
-    "#                 truncated_lfp = False\n",
-    "#             except OSError:\n",
-    "#                 fname = directory + '/probe_' + str(probe_id) + '_lfp.nwb'\n",
-    "#                 os.remove(fname)\n",
-    "#                 print(\"  Truncated LFP file, re-downloading\")\n",
-    "#             except ValueError:\n",
-    "#                 print(\"  LFP file not found.\")\n",
-    "#                 truncated_lfp = False"
+    "        while truncated_file:\n",
+    "            session = cache.get_session_data(session_id)\n",
+    "            try:\n",
+    "                print(session.specimen_name)\n",
+    "                truncated_file = False\n",
+    "            except OSError:\n",
+    "                shutil.rmtree(directory)\n",
+    "                print(\" Truncated spikes file, re-downloading\")\n",
+    "\n",
+    "        for probe_id, probe in session.probes.iterrows():\n",
+    "\n",
+    "            print(' ' + probe.description)\n",
+    "            truncated_lfp = True\n",
+    "\n",
+    "            while truncated_lfp:\n",
+    "                try:\n",
+    "                    lfp = session.get_lfp(probe_id)\n",
+    "                    truncated_lfp = False\n",
+    "                except OSError:\n",
+    "                    fname = directory + '/probe_' + str(probe_id) + '_lfp.nwb'\n",
+    "                    os.remove(fname)\n",
+    "                    print(\"  Truncated LFP file, re-downloading\")\n",
+    "                except ValueError:\n",
+    "                    print(\"  LFP file not found.\")\n",
+    "                    truncated_lfp = False"
    ]
   },
   {
