--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
@@ -200,7 +200,8 @@
    "source": [
     "# Update this to a valid directory in your filesystem\n",
     "# Remember to choose a location that has plenty of free space available.\n",
-    "output_dir = \"/local1/visual_behavior_ophys_cache_dir\""
+    "output_dir = \"/local1/visual_behavior_ophys_cache_dir\"\n",
+    "DOWNLOAD_COMPLETE_DATASET' = True "
    ]
   },
   {
@@ -1740,13 +1741,14 @@
    "outputs": [],
    "source": [
     "# Remove rows from the behavior sessions table which don't correspond to a behavior session NWB file\n",
-    "# filtered_behavior_sessions = behavior_sessions.dropna(subset=[\"file_id\"])\n",
+    "filtered_behavior_sessions = behavior_sessions.dropna(subset=[\"file_id\"])\n",
     "\n",
-    "# for behavior_session_id, _ in filtered_behavior_sessions.iterrows():\n",
-    "#     _ = cache.get_behavior_session(behavior_session_id=behavior_session_id)\n",
-    "#\n",
-    "# for ophys_experiment_id, _ in behavior_ophys_experiments.iterrows():\n",
-    "#     _ = cache.get_behavior_ophys_experiment(ophys_experiment_id=ophys_experiment_id)"
+    "if DOWNLOAD_COMPLETE_DATASET:\n",
+    "    for behavior_session_id, _ in filtered_behavior_sessions.iterrows():\n",
+    "        _ = cache.get_behavior_session(behavior_session_id=behavior_session_id)\n",
+    "\n",
+    "    for ophys_experiment_id, _ in behavior_ophys_experiments.iterrows():\n",
+    "        _ = cache.get_behavior_ophys_experiment(ophys_experiment_id=ophys_experiment_id)"
    ]
   },
   {
