--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_dataset_manifest.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_dataset_manifest.ipynb
@@ -5170,7 +5170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -5199,17 +5199,16 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cell_per_exp = cells_table.groupby('ophys_experiment_id').size()\\\n",
-    "    .to_frame().rename(columns={0: 'n_cells'})\n",
-    "fig = plt.hist(cell_per_exp['n_cells'], bins=50)\n",
+    "cell_per_exp = cells_table.groupby('ophys_experiment_id').size()\n",
+    "fig = plt.hist(cell_per_exp, bins=50)\n",
     "plt.show()\n",
-    "cell_per_exp['n_cells'].describe()"
+    "cell_per_exp.describe()"
    ]
   },
   {
@@ -5221,7 +5220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5237,7 +5236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -5269,7 +5268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -5278,7 +5277,7 @@
        "<AxesSubplot:xlabel='n_cells', ylabel='cre_line'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
