--- a/doc_template/examples_root/examples/nb/reference_space.ipynb
+++ b/doc_template/examples_root/examples/nb/reference_space.ipynb
@@ -1109,7 +1109,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1123,7 +1123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "papermill": {
    "default_parameters": {},
