--- a/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_ophys_data_access.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8432ad9b",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86cb4f05",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1be4fb02",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -45,6 +48,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e9c2097",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -74,6 +78,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe5057d6",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -85,6 +90,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "68b8cb24",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -97,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e8afbc8",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,6 +116,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05e83dd7",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -120,6 +128,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff3f2f34",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -135,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03a52ea5",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -148,6 +158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b26fd439",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -160,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "396e1034",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -188,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "781412bf",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -201,12 +214,13 @@
     "# Update this to a valid directory in your filesystem\n",
     "# Remember to choose a location that has plenty of free space available.\n",
     "output_dir = \"/local1/visual_behavior_ophys_cache_dir\"\n",
-    "DOWNLOAD_COMPLETE_DATASET' = True "
+    "DOWNLOAD_COMPLETE_DATASET = True "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "22738ce0",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -231,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "789b2c29",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -250,6 +265,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c174b0a",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -263,6 +279,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df8231e7",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -277,6 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90f5ce47",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -289,6 +307,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58652284",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -301,6 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "376665f9",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -313,6 +333,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ea84f59",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -325,6 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a546e49f",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -337,6 +359,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3659c8d0",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -349,6 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "27a9e239",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -361,6 +385,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "533ed358",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -381,6 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e63398b",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -393,6 +419,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e94f4ce",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -405,6 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17232af7",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -425,6 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e945c2da",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -437,6 +466,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c7a1db1",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -449,6 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2c109ecc",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -463,6 +494,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23787efa",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -478,6 +510,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3796bdf0",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -492,6 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5f22ddda",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -788,6 +822,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "839e5c40",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -804,6 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "91e77985",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1093,6 +1129,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "965547eb",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1109,6 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "8426cacb",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1407,6 +1445,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58332985",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1423,6 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6b02f690",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1444,6 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "699acb2c",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1465,6 +1506,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81274b2b",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1477,6 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "5f5916ef",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1567,6 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "b31be593",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1603,6 +1647,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4b70dd9",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1617,6 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "1e6906bb",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1638,6 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "4a4aa252",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1659,6 +1706,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b73bb76",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1671,6 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "52416f8d",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1706,6 +1755,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "591f6cb9",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1717,6 +1767,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e6ea298",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1733,6 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "60ee366e",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1753,6 +1805,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bdc818fc",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1808,6 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "d917e48b",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1837,6 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "b259055e",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1864,6 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "0d6b03c0",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1891,6 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "a954b1b5",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1917,6 +1974,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0cdcfcd6",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1971,6 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "37c06d70",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -6210,6 +6269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62c9d9c3",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -6225,7 +6285,7 @@
    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6239,7 +6299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
