Add sklearn pip install command.

--- a/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
@@ -1121,6 +1121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install sklearn\n",
+    "\n",
     "from sklearn import svm\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import confusion_matrix"
@@ -1272,9 +1274,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "allensdk",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "allensdk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1286,7 +1288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
