--- a/doc_template/examples_root/examples/nb/brain_observatory.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory.ipynb
@@ -42,20 +42,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "output_dir = '.'"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from allensdk.core.brain_observatory_cache import BrainObservatoryCache\n",
@@ -71,17 +75,16 @@
     "# Download a list of all targeted areas\n",
     "targeted_structures = boc.get_all_targeted_structures()\n",
     "print(\"all targeted structures: \" + str(targeted_structures))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from allensdk.core.brain_observatory_cache import BrainObservatoryCache\n",
@@ -97,13 +100,7 @@
     "# Download a list of all targeted areas\n",
     "targeted_structures = boc.get_all_targeted_structures()\n",
     "print(\"all targeted structures: \" + str(targeted_structures))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -1071,11 +1068,11 @@
     }
    ],
    "source": [
-    "from allensdk.brain_observatory.dff import compute_dff\n",
+    "from allensdk.brain_observatory.dff import compute_dff_windowed_mode\n",
     "\n",
     "plt.figure(figsize=(14,4))\n",
     "plt.title(\"dF/F Trace\")\n",
-    "dff = compute_dff(np.array(corrected_traces))\n",
+    "dff = compute_dff_windowed_mode(np.array(corrected_traces))\n",
     "plt.plot(time, dff[0,:])\n",
     "plt.show()"
    ]
@@ -1289,7 +1286,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1303,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
