need to load latest manifest

--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_data_access.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_data_access.ipynb
@@ -697,6 +697,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load latest manifest\n",
+    "cache.load_latest_manifest()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -2528,7 +2538,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "interpreter": {
    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   },
