--- a/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
@@ -1121,7 +1121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install sklearn\n",
+    "!pip install sklearn\n",
     "\n",
     "from sklearn import svm\n",
     "from sklearn.model_selection import KFold\n",
@@ -1274,7 +1274,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1288,7 +1288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
