Need to rename output_dir to pass in a variable output_dir

--- a/doc_template/examples_root/examples/nb/ecephys_optotagging.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_optotagging.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# Example cache directory path, it determines where downloaded data will be stored\n",
-    "data_directory = '/local1/ecephys_cache_dir/'"
+    "output_dir = '/local1/ecephys_cache_dir/'"
    ]
   },
   {
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "manifest_path = os.path.join(data_directory, \"manifest.json\")\n",
+    "manifest_path = os.path.join(output_dir, \"manifest.json\")\n",
     "\n",
     "cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)"
    ]
@@ -117,7 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "manifest_path = os.path.join(data_directory, \"manifest.json\")\n",
+    "manifest_path = os.path.join(output_dir, \"manifest.json\")\n",
     "\n",
     "cache = EcephysProjectCache.from_warehouse(manifest=manifest_path)"
    ]
