--- a/doc_template/examples_root/examples/nb/brain_observatory.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory.ipynb
@@ -45,7 +45,10 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "parameters"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1273,7 +1276,7 @@
     "\n",
     "# scatter of gaze positions over approximate screen area\n",
     "plt.figure()\n",
-    "plt.scatter(locations.T[0], locations.T[1], s=2, c=\"m\", edgecolor=\"\")\n",
+    "plt.scatter(locations.T[0], locations.T[1], s=2, c=\"m\", edgecolor=['none'])\n",
     "plt.title(\"Eye position scatter plot\")\n",
     "plt.xlim(-70, 70)\n",
     "plt.ylim(-60, 60)\n",
@@ -1286,7 +1289,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1300,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
