rename stop_time -> end_time

--- a/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_mouse_history.ipynb
@@ -2371,9 +2371,9 @@
     "        intial_time: initial time to plot from\n",
     "        final_time: final time to plot to\n",
     "    '''\n",
-    "    stimulus_presentations_sample = dataset.stimulus_presentations.query('stop_time >= @initial_time and start_time <= @final_time')\n",
+    "    stimulus_presentations_sample = dataset.stimulus_presentations.query('end_time >= @initial_time and start_time <= @final_time')\n",
     "    for idx, stimulus in stimulus_presentations_sample.iterrows():\n",
-    "        ax.axvspan(stimulus['start_time'], stimulus['stop_time'], color=stimulus['color'], alpha=0.25)"
+    "        ax.axvspan(stimulus['start_time'], stimulus['end_time'], color=stimulus['color'], alpha=0.25)"
    ]
   },
   {
