sklearn -> scikit-learn

--- a/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_quickstart.ipynb
@@ -1121,7 +1121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install sklearn\n",
+    "!pip install scikit-learn\n",
     "\n",
     "from sklearn import svm\n",
     "from sklearn.model_selection import KFold\n",
