parameterize output_dir

--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_LFP_analysis.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_LFP_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae902862",
+   "id": "6bb02f1a",
    "metadata": {
     "papermill": {
      "duration": 0.011796,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb744dc",
+   "id": "e36acc8a",
    "metadata": {},
    "source": [
     "## Learning about the available probes"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7afeb83",
+   "id": "6c7d2610",
    "metadata": {},
    "source": [
     "First let's import the `VisualBehaviorNeuropixelsProjectCache` and a few other helpful packages:"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "94f6902c",
+   "id": "7bc37452",
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +75,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af872b41",
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "output_dir = \"/path/to/vbn_cache\""
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "227af228",
+   "id": "77a62a62",
    "metadata": {},
    "source": [
     "Now let's instantiate a cache from the Amazon S3 bucket. The `cache_dir` should be a path specifying where to download data on your local system:"
@@ -85,19 +99,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "20f8cbc4",
+   "id": "a8c7bacd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_dir = \"/path/to/vbn_cache\"\n",
-    "\n",
     "cache = VisualBehaviorNeuropixelsProjectCache.from_s3_cache(\n",
-    "            cache_dir=cache_dir)"
+    "            cache_dir=output_dir)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15d56488",
+   "id": "3711ac01",
    "metadata": {},
    "source": [
     "**Finding LFP data of interest**\n",
@@ -108,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9b32147e",
+   "id": "d9d52da5",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b667fb5",
+   "id": "cb05bec5",
    "metadata": {},
    "source": [
     "Now let's find a probe insertion with good LFP data that passed through VISp."
@@ -137,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ddfb4b53",
+   "id": "3a176ce5",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6a8bff",
+   "id": "a311a723",
    "metadata": {},
    "source": [
     "Below we'll select an insertion from this table (1064735073) and grab the session data for it. We can get the session ID from the probes table:"
@@ -310,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "156b0a05",
+   "id": "2efbb620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a724fa05",
+   "id": "45708378",
    "metadata": {},
    "source": [
     "## Loading LFP data"
@@ -329,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1bf8448",
+   "id": "d3bb9f65",
    "metadata": {},
    "source": [
     "Once we've gotten the session data, we can use `get_lfp` to grab the LFP data for our selected probe insertion. If you haven't tried to access this data previously, you'll have to wait while the LFP NWB file downloads. Even if you already have the data stored locally, it may still take a minute to load, since the LFP data is quite large (this example file is 4.5 GB).\n",
@@ -340,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "78341edd",
+   "id": "00df4338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "33b6e797",
+   "id": "7e2eb29a",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:38:17.530077Z",
@@ -768,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2124cd0c",
+   "id": "bd695f40",
    "metadata": {
     "papermill": {
      "duration": 0.175397,
@@ -790,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "78adcd35",
+   "id": "aa596d59",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:38:18.555561Z",
@@ -1209,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e659b5c2",
+   "id": "de6105ee",
    "metadata": {
     "papermill": {
      "duration": 0.17422,
@@ -1229,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4b201aed",
+   "id": "7cac1641",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:38:20.187826Z",
@@ -1277,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c78a1ab",
+   "id": "fbf5089b",
    "metadata": {
     "papermill": {
      "duration": 0.174601,
@@ -1295,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4406d13d",
+   "id": "8759de75",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:38:21.716611Z",
@@ -1334,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aee4be5",
+   "id": "c0a0f7e7",
    "metadata": {
     "papermill": {
      "duration": 0.179739,
@@ -1357,7 +1369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cf3c13d",
+   "id": "f2d24e61",
    "metadata": {},
    "source": [
     "## Aligning LFP data to a stimulus"
@@ -1365,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd96a7b8",
+   "id": "ea4842bb",
    "metadata": {
     "papermill": {
      "duration": 0.18031,
@@ -1385,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "43ddc9c8",
+   "id": "610620f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c955de89",
+   "id": "d4cc9fc5",
    "metadata": {},
    "source": [
     "First, let's make a convenience function that helps us align the LFP to times of interest. Because we're using xarrays, the alignment operation is fast, and doesn't require any for loops! There's a lot going on here, so we recommend referring to the pandas and xarray documentation if anything is confusing:"
@@ -1406,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c3c98319",
+   "id": "fa3123dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9a41ddea",
+   "id": "1bd6e1c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8cebc63",
+   "id": "603b86c2",
    "metadata": {},
    "source": [
     "`aligned_lfp` is a DataArray with dimensions of channels x trials x time. It's been downsampled to 500 Hz by changing the time step in the `trial_window` argument of the `align_lfp` function.\n",
@@ -1461,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d65ee0f0",
+   "id": "81490736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3e397d0c",
+   "id": "351ba531",
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178cb17f",
+   "id": "ce0b8630",
    "metadata": {},
    "source": [
     "Here we see the effect of a 250 ms flash stimulus on the LFP. There are two large responses in cortex (the first ~700 um below the brain surface), one corresponding to the stimulus onset (around 50 ms), and one corresponding to the stimulus offset (around sample 300 ms).\n",
@@ -1533,7 +1545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b9a411",
+   "id": "d4a6b152",
    "metadata": {
     "papermill": {
      "duration": 0.184171,
@@ -1550,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ddba938",
+   "id": "47be379c",
    "metadata": {
     "papermill": {
      "duration": 0.188486,
@@ -1572,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9b73cad1",
+   "id": "d930606b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65aaae41",
+   "id": "e55f23c2",
    "metadata": {
     "papermill": {
      "duration": 0.187469,
@@ -1615,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9e414a5b",
+   "id": "ba9e694d",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:40:23.862043Z",
@@ -1656,7 +1668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8499cf74",
+   "id": "9875c468",
    "metadata": {},
    "source": [
     "Let's also find the stimulus presentations in this window"
@@ -1665,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8b5593a8",
+   "id": "02f2ae77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,7 +1688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1649d08",
+   "id": "dbfaa6fa",
    "metadata": {
     "papermill": {
      "duration": 0.235302,
@@ -1694,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d4e2f340",
+   "id": "a931b411",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:41:39.587303Z",
@@ -1748,7 +1760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1fd4e3",
+   "id": "0e4a4b82",
    "metadata": {},
    "source": [
     "This plot shows clear troughs in the LFP associated with every stimulus presentation. We also see that the spiking for our selected unit is highly entrained to the stimulus presentations."
@@ -1756,7 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a472384d",
+   "id": "61740ecb",
    "metadata": {},
    "source": [
     "Now let's calculate a spike triggered average of the LFP using a subset of spikes for our unit of interest and the `align_lfp` function we defined above:"
@@ -1765,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "58bc794f",
+   "id": "0e7ea558",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecd94221",
+   "id": "fa2a9ac2",
    "metadata": {},
    "source": [
     "Let's plot this spike-triggered LFP for a region of the probe centered on this unit's peak channel:"
@@ -1785,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9bed263b",
+   "id": "371c67e5",
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d0b12c",
+   "id": "35146fb2",
    "metadata": {},
    "source": [
     "Aligning the LFP to spikes from our example unit reveals a low resolution spike waveform (note the thin dark stripe at the center of the plot). As an added exercise, you can compare this plot to the high resolution waveform for this unit stored in the session `mean_waveforms` dictionary. This plot also gives us some information about the network state that was conducive to spiking for this unit. Note the blue LFP depression in the middle of the plot, indicating that this unit tended to spike during periods of relative network excitability. How might this look for other cortical units? What if we limited our analysis to spikes during a particular stimulus or spontaneous activity?"
@@ -1831,7 +1843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d21ccc7",
+   "id": "77f477b5",
    "metadata": {
     "papermill": {
      "duration": 0.184966,
@@ -1848,7 +1860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3733ad8",
+   "id": "f3b251a4",
    "metadata": {
     "papermill": {
      "duration": 0.183898,
@@ -1868,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cda6bb92",
+   "id": "89fe5ff3",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:41:41.334332Z",
@@ -2328,7 +2340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a2f58ea",
+   "id": "22aca494",
    "metadata": {
     "papermill": {
      "duration": 0.190746,
@@ -2346,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1efaa3bb",
+   "id": "d657c261",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:41:42.260778Z",
@@ -2430,7 +2442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f347f6",
+   "id": "1ff7e354",
    "metadata": {},
    "source": [
     "The CSV for this probe insertion reveals that visual activation is nicely confined to visual cortex (between the white lines). The trajectory for this probe likely missed other visually-responsive areas. Let's check to see which other areas were recorded:"
@@ -2439,7 +2451,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3a0355de",
+   "id": "aa32f450",
    "metadata": {},
    "outputs": [
     {
@@ -2459,8 +2471,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2474,7 +2487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
