--- a/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_analyzing_behavior_only_data.ipynb
+++ b/doc_template/examples_root/examples/nb/visual_behavior_neuropixels_analyzing_behavior_only_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "659789fc",
+   "id": "030588c0",
    "metadata": {},
    "source": [
     "# Analyzing behavior-only sessions from the Visual Behavior Neuropixels dataset\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3864bc02",
+   "id": "a9c9929e",
    "metadata": {},
    "source": [
     "## Finding behavior sessions to analyze\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6832c96a",
+   "id": "1ea087c1",
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +58,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae6a6e0b",
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "output_dir = \"/path/to/vbn_cache\""
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "aa753025",
+   "id": "6808cf44",
    "metadata": {},
    "source": [
     "Now we'll instantiate the cache to begin downloading data from the S3 bucket. Note that the `cache_dir` should point to a local directory where you would like to download the data. If you've already downloaded the required data, the cache will pull the local files from this directory."
@@ -68,19 +82,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ea2afb8",
+   "id": "0cfc22fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_dir = \"/path/to/vbn_cache\"\n",
-    "\n",
     "cache = VisualBehaviorNeuropixelsProjectCache.from_s3_cache(\n",
-    "            cache_dir=cache_dir)"
+    "            cache_dir=output_dir)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "05563abe",
+   "id": "da5a95cf",
    "metadata": {},
    "source": [
     "Once we have a cache instance, we can grab the `behavior_session_table` to see what behavior sessions are available for analysis."
@@ -89,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1bdd1b9",
+   "id": "e4a95e78",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfcf5c81",
+   "id": "613472a7",
    "metadata": {},
    "source": [
     "Now let's grab all the sessions for an example mouse (533537) and order them chronologically."
@@ -331,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "81fd1207",
+   "id": "0a0671ef",
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "61beb666",
+   "id": "8bb8b483",
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5be0de",
+   "id": "a7059ab8",
    "metadata": {},
    "source": [
     "Looks like this mouse had 42 behavior sessions. You can see that these start with the earliest training stage (TRAINING_0), when the mouse is first introduced to the lick spout. After that, the mouse progresses through the training stages and is handed off to the Neuropixels team for habituation on the experimental rig on 2020-09-22. The final two sessions in this list are recording sessions (EPHYS_1) during which Neuropixels data was collected while the mouse performed the behavior. If we wanted to analyze the ephys data from these sessions, we would use the `ecephys_session_id` from this table to load the corresponding NWB file with `cache.get_ecephys_session`."
@@ -1466,7 +1478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e8d06d6",
+   "id": "7bb7330a",
    "metadata": {},
    "source": [
     "## Loading behavior data\n",
@@ -1477,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ab5da6a2",
+   "id": "002a9b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e46eda9",
+   "id": "97d92ab5",
    "metadata": {},
    "source": [
     "We can view all of the attributes of this new object:"
@@ -1495,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d20d687d",
+   "id": "a0e31418",
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f7a6887",
+   "id": "d53312b1",
    "metadata": {
     "papermill": {
      "duration": 0.160133,
@@ -1548,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "17525cab",
+   "id": "de983187",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:04.293581Z",
@@ -1572,7 +1584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b9d7a9f",
+   "id": "a39fac08",
    "metadata": {},
    "source": [
     "We can also look at some basic task parameters:"
@@ -1581,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5e4175dd",
+   "id": "759fefbc",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43a035d",
+   "id": "9806173b",
    "metadata": {},
    "source": [
     "## Understanding behavior session contents\n",
@@ -1621,7 +1633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820d6b7e",
+   "id": "0cf22367",
    "metadata": {
     "papermill": {
      "duration": 0.130613,
@@ -1640,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a0e09d3d",
+   "id": "0ebe20eb",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:05.960342Z",
@@ -1849,7 +1861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3911ef5",
+   "id": "a3d9724d",
    "metadata": {},
    "source": [
     "Here's a quick explanation for the important columns in this table:\n",
@@ -1879,7 +1891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe586f5",
+   "id": "be257fb6",
    "metadata": {
     "papermill": {
      "duration": 0.130844,
@@ -1898,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "853bb2ef",
+   "id": "9f1a0b65",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:06.561946Z",
@@ -1991,7 +2003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c4fcaa",
+   "id": "edb21a2c",
    "metadata": {
     "papermill": {
      "duration": 0.134096,
@@ -2010,7 +2022,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "47edbecd",
+   "id": "86fb5a8d",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:07.112407Z",
@@ -2109,7 +2121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28da6b4e",
+   "id": "5d5520e7",
    "metadata": {
     "papermill": {
      "duration": 0.13344,
@@ -2128,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d533cd8e",
+   "id": "fdd759e6",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:07.663126Z",
@@ -2221,7 +2233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99fbd519",
+   "id": "67fc0824",
    "metadata": {
     "papermill": {
      "duration": 0.13377,
@@ -2238,7 +2250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1451597b",
+   "id": "b241c77a",
    "metadata": {
     "papermill": {
      "duration": 0.13331,
@@ -2256,7 +2268,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "91138ca3",
+   "id": "a5ba15f7",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:08.479817Z",
@@ -2284,7 +2296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e196d97e",
+   "id": "9d7de8ae",
    "metadata": {
     "papermill": {
      "duration": 0.132178,
@@ -2302,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4dc57491",
+   "id": "a9998dbe",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:09.078092Z",
@@ -2386,7 +2398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca252172",
+   "id": "01ff8229",
    "metadata": {
     "papermill": {
      "duration": 0.13274,
@@ -2404,7 +2416,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8841065a",
+   "id": "0dc214b7",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-14T00:21:09.623083Z",
@@ -2464,7 +2476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4463800e",
+   "id": "1b3eb232",
    "metadata": {
     "papermill": {
      "duration": 0.049068,
@@ -2481,7 +2493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6503eace",
+   "id": "5735de40",
    "metadata": {
     "papermill": {
      "duration": 0.04959,
@@ -2499,7 +2511,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "25e0cc41",
+   "id": "577fc78d",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-12-13T23:44:49.289706Z",
@@ -2768,7 +2780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b798d127",
+   "id": "054ab87a",
    "metadata": {
     "papermill": {
      "duration": 0.049003,
@@ -2827,7 +2839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b27d73fc",
+   "id": "edc92625",
    "metadata": {},
    "source": [
     "You can use the `get_performance_metrics` method for a helpful summary of the behavior during this session:"
@@ -2836,7 +2848,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "02b96e82",
+   "id": "65c6f5f0",
    "metadata": {},
    "outputs": [
     {
@@ -2878,7 +2890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3a96f3",
+   "id": "f7d86355",
    "metadata": {},
    "source": [
     "Let's calculate the hit rate for each image individually:"
@@ -2887,7 +2899,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "80bc0150",
+   "id": "3e7501cd",
    "metadata": {},
    "outputs": [
     {
@@ -3001,7 +3013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebbd0d77",
+   "id": "a28980ee",
    "metadata": {},
    "source": [
     "These hit rates are for the entire session, but some mice lose motivation before the end of the session. For these mice, some analyses might benefit from considering only the epochs of the session for which the mouse was engaged. Let's look at a simple engagment index (reward rate) for this session:"
@@ -3010,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "62df72c7",
+   "id": "2c897286",
    "metadata": {
     "scrolled": false
    },
@@ -3048,7 +3060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d36331",
+   "id": "b798d071",
    "metadata": {},
    "source": [
     "Looks like the mouse lost motivation around trial 350. Let's recompute our image-wise hit rates using only engaged trials. We'll define this as trials for which the reward rate was > 2 rewards per minute."
@@ -3057,7 +3069,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3ec0f3af",
+   "id": "ec18396a",
    "metadata": {},
    "outputs": [
     {
@@ -3174,15 +3186,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c8de09",
+   "id": "e253e460",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3196,7 +3209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
